--- a/projects.json
+++ b/projects.json
@@ -61,7 +61,7 @@
         "datetime": "2025",
         "minisrc": "res/bg_mini_motherlode.png",
         "banner": "res/banner_motherlode.png",
-        "type": "Zloppy Games",
+        "type": "Zloppy-Games",
         "description": "A take on the classic tycoon genre in Fortnite Creative; we try to aim for a more fun and engaging experience that's just not catered to ensuring children get hooked on the game.",
         "longdescription": "",
         "work": [
