--- a/projects.json
+++ b/projects.json
@@ -123,7 +123,7 @@
         "title": "Ember Sword",
         "language": "C++",
         "engine": "Radiance",
-        "role": "Gameplay Programmer",
+        "role": "Tools Programmer",
         "duration": "3y+",
         "datetime": "2021",
         "minisrc": "res/bg_mini_embersword.png",
