--- a/projects.json
+++ b/projects.json
@@ -233,7 +233,7 @@
         "engine": "Unreal",
         "role": "Game Programmer",
         "duration": "6m",
-        "datetime": "2022",
+        "datetime": "2022-2023",
         "minisrc": "res/bg_mini_farmion.png",
         "banner": "res/banner_farmion.png",
         "type": "BH",
@@ -362,7 +362,7 @@
         "engine": "Radiance",
         "role": "Gameplay Programmer",
         "duration": "2y+",
-        "datetime": "2021",
+        "datetime": "2021-2025",
         "minisrc": "res/bg_mini_radiance.png",
         "banner": "res/banner_radiance.png",
         "type": "BSS",
