--- a/projects.json
+++ b/projects.json
@@ -6,7 +6,7 @@
         "language": "C++",
         "engine": "Unreal",
         "role": "Game Programmer",
-        "duration": "5m+",
+        "duration": "Active",
         "datetime": "2025",
         "minisrc": "res/bg_mini_dtail.png",
         "banner": "res/banner_dtail.png",
@@ -56,9 +56,9 @@
         "title": "Ember Sword",
         "language": "C++",
         "engine": "Radiance",
-        "role": "Tools Programmer",
-        "duration": "3y+",
-        "datetime": "2021",
+        "role": "Gameplay Programmer",
+        "duration": "4y+",
+        "datetime": "2021-2025",
         "minisrc": "res/bg_mini_embersword.png",
         "banner": "res/banner_embersword.png",
         "type": "BSS",
@@ -360,8 +360,8 @@
         "title": "Radiance Engine",
         "language": "C++",
         "engine": "Radiance",
-        "role": "Gameplay Programmer",
-        "duration": "2y+",
+        "role": "Tools Programmer",
+        "duration": "4y+",
         "datetime": "2021-2025",
         "minisrc": "res/bg_mini_radiance.png",
         "banner": "res/banner_radiance.png",
